add dictionary api

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -330,6 +330,7 @@
     <Compile Include="Symbols\DeclaredObject\FuncSymbol.vb" />
     <Compile Include="Symbols\DeclaredObject\GlobalVariable.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Array.vb" />
+    <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Dictionary.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\String.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\NamespaceDoc.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Math.vb" />
