--- a/test/test.vbproj
+++ b/test/test.vbproj
@@ -137,6 +137,7 @@
     <Compile Include="functionTest.vb" />
     <Compile Include="arrayTest.vb" />
     <Compile Include="incrementTest.vb" />
+    <Compile Include="dictionarytest.vb" />
     <Compile Include="nullreferenceTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
