add .net primitive type names

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -320,6 +320,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DotNetTypes.vb" />
     <Compile Include="Compiler\ModuleBuilder.vb" />
     <Compile Include="Compiler\wat2wasm.vb" />
     <Compile Include="Extensions.vb" />
