compiler symbol table

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -345,7 +345,7 @@
     <Compile Include="Symbols\Parser\AttributeParser.vb" />
     <Compile Include="Symbols\Parser\StringParser.vb" />
     <Compile Include="Symbols\Parser\ModuleParser.vb" />
-    <Compile Include="Symbols\SymbolTable.vb" />
+    <Compile Include="Compiler\SymbolTable.vb" />
     <Compile Include="Symbols\DeclaredObject\ImportSymbol.vb" />
     <Compile Include="Symbols\FuncSymbol.vb" />
     <Compile Include="Symbols\Expression.vb" />
