split source file

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -320,6 +320,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Type\TypeAlias.vb" />
     <Compile Include="Type\Types.vb" />
     <Compile Include="Type\DotNetTypes.vb" />
     <Compile Include="Compiler\ModuleBuilder.vb" />
