--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -354,7 +354,7 @@
     <Compile Include="Symbols\Parser\FunctionParser.vb" />
     <Compile Include="Symbols\Parser\BodyParser.vb" />
     <Compile Include="Symbols\Parser\ExpressionParser.vb" />
-    <Compile Include="Symbols\Parser\CTypeParser.vb" />
+    <Compile Include="Type\CTypeHandle.vb" />
     <Compile Include="Symbols\Parser\BitConverter.vb" />
     <Compile Include="Compiler\Wabt.vb" />
     <Compile Include="Symbols\ModuleSymbol.vb" />
