Convert type alias in compiler to WebAssembly primitive type.

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -320,9 +320,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Type\TypeAlias.vb" />
     <Compile Include="Type\Types.vb" />
-    <Compile Include="Type\DotNetTypes.vb" />
+    <Compile Include="Type\TypeAlias.vb" />
+    <Compile Include="Type\TypeAbstract.vb" />
     <Compile Include="Compiler\ModuleBuilder.vb" />
     <Compile Include="Compiler\wat2wasm.vb" />
     <Compile Include="Extensions.vb" />
