--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -321,6 +321,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Symbols\FuncInvoke.vb" />
+    <Compile Include="Type\Literal.vb" />
     <Compile Include="Type\Types.vb" />
     <Compile Include="Type\TypeAlias.vb" />
     <Compile Include="Type\TypeAbstract.vb" />
