--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -323,6 +323,7 @@
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\FuncInvoke.vb" />
     <Compile Include="Symbols\Parser\Expressions\FuncInvokeParser.vb" />
+    <Compile Include="Symbols\Parser\Expressions\MemberCallsParser.vb" />
     <Compile Include="Type\Literal.vb" />
     <Compile Include="Type\Types.vb" />
     <Compile Include="Type\TypeAlias.vb" />
