create new object

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -324,6 +324,7 @@
     <Compile Include="Symbols\FuncInvoke.vb" />
     <Compile Include="Symbols\Parser\Expressions\FuncInvokeParser.vb" />
     <Compile Include="Symbols\Parser\Expressions\MemberCallsParser.vb" />
+    <Compile Include="Symbols\Parser\Expressions\ObjectCreatorParser.vb" />
     <Compile Include="Type\Literal.vb" />
     <Compile Include="Type\Types.vb" />
     <Compile Include="Type\TypeAlias.vb" />
