how to parse class object>?

--- a/test/test.vbproj
+++ b/test/test.vbproj
@@ -129,6 +129,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassTest.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="DeclareTest.vb" />
     <Compile Include="ForLoopTest.vb" />
