object group by name and module labels

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -320,6 +320,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compiler\ModuleOf.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\FuncInvoke.vb" />
     <Compile Include="Symbols\Parser\Expressions\FuncInvokeParser.vb" />
