ad symbol reference

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -323,6 +323,7 @@
     <Compile Include="Compiler\Link\FindSymbols.vb" />
     <Compile Include="Compiler\Link\ModuleOf.vb" />
     <Compile Include="DeclareHelpers.vb" />
+    <Compile Include="Symbols\ReferenceSymbol.vb" />
     <Compile Include="Symbols\FuncInvoke.vb" />
     <Compile Include="Symbols\Parser\Expressions\FuncInvokeParser.vb" />
     <Compile Include="Symbols\Parser\Expressions\MemberCallsParser.vb" />
