--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -330,6 +330,7 @@
     <Compile Include="Symbols\Parser\Expressions\ObjectCreatorParser.vb" />
     <Compile Include="Symbols\Parser\Body\DeclaratorParser.vb" />
     <Compile Include="Type\Literal.vb" />
+    <Compile Include="Type\TypeEquality.vb" />
     <Compile Include="Type\Types.vb" />
     <Compile Include="Type\TypeAlias.vb" />
     <Compile Include="Type\TypeAbstract.vb" />
