--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -367,7 +367,7 @@
     <Compile Include="Symbols\Parser\Body\BodyParser.vb" />
     <Compile Include="Symbols\Parser\Expressions\ExpressionParser.vb" />
     <Compile Include="Type\CTypeHandle.vb" />
-    <Compile Include="Symbols\Parser\BitConverter.vb" />
+    <Compile Include="Symbols\Memory\BitConverter.vb" />
     <Compile Include="Compiler\Wabt.vb" />
     <Compile Include="Symbols\ModuleSymbol.vb" />
     <Compile Include="Symbols\Symbols.vb" />
