module start symbol

--- a/test/test.vbproj
+++ b/test/test.vbproj
@@ -139,6 +139,7 @@
     <Compile Include="arrayTest.vb" />
     <Compile Include="incrementTest.vb" />
     <Compile Include="dictionarytest.vb" />
+    <Compile Include="arrayTest2.vb" />
     <Compile Include="Modulemethod_test.vb" />
     <Compile Include="nullreferenceTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
