--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -180,15 +180,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\modules\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
+    <ProjectReference Include="..\..\modules\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\modules\vs_solutions\dev-kit\VisualStudio\VisualStudio.vbproj">
+    <ProjectReference Include="..\..\modules\vs_solutions\dev-kit\VisualStudio\VisualStudio.vbproj">
       <Project>{3a65d811-fc5c-4ad9-8456-8f720ff14c16}</Project>
       <Name>VisualStudio</Name>
     </ProjectReference>
-    <ProjectReference Include="..\wasm\Wasm.vbproj">
+    <ProjectReference Include="..\..\wasm\Wasm.vbproj">
       <Project>{22f458ac-2f9a-4350-8f35-0f2d9cc57a96}</Project>
       <Name>Wasm</Name>
     </ProjectReference>
