--- a/runtime/WebAssembly/tsconfig.json
+++ b/runtime/WebAssembly/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "../dist",
-    "outFile": "../../Demo/javascript/visualbasic.wasm.js",
+    "outFile": "../../dist/visualbasic.wasm.js",
     "declaration": true
   },
   "exclude": [
