--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -345,7 +345,7 @@
     <Compile Include="Symbols\DeclaredObject\IDeclaredObject.vb" />
     <Compile Include="Symbols\DeclaredObject\FuncSymbol.vb" />
     <Compile Include="Symbols\DeclaredObject\GlobalVariable.vb" />
-    <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Array.vb" />
+    <Compile Include="Symbols\DeclaredObject\JavaScriptImports\ArrayList.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Dictionary.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\String.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\NamespaceDoc.vb" />
