have some bugs for returns a array literal

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -324,6 +324,7 @@
     <Compile Include="Compiler\Link\ModuleOf.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\DelegateSymbol.vb" />
+    <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Start.vb" />
     <Compile Include="Symbols\Parser\Expressions\BinaryOperatorParser.vb" />
     <Compile Include="Symbols\ReferenceSymbol.vb" />
