there is a bug for return array value when generate S-expression

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -323,7 +323,7 @@
     <Compile Include="Compiler\Link\FindSymbols.vb" />
     <Compile Include="Compiler\Link\ModuleOf.vb" />
     <Compile Include="DeclareHelpers.vb" />
-    <Compile Include="Symbols\DelegateSymbol.vb" />
+    <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Start.vb" />
     <Compile Include="Symbols\Parser\Expressions\BinaryOperatorParser.vb" />
@@ -363,7 +363,7 @@
     <Compile Include="Symbols\Parser\ModuleParser.vb" />
     <Compile Include="Compiler\Link\SymbolTable.vb" />
     <Compile Include="Symbols\DeclaredObject\ImportSymbol.vb" />
-    <Compile Include="Symbols\FuncSymbol.vb" />
+    <Compile Include="Symbols\FunctionSymbol\FuncSignature.vb" />
     <Compile Include="Symbols\Expression.vb" />
     <Compile Include="Symbols\ExportSymbol.vb" />
     <Compile Include="Symbols\Parser\FunctionParser.vb" />
