--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -322,6 +322,7 @@
   <ItemGroup>
     <Compile Include="Compiler\Link\FindSymbols.vb" />
     <Compile Include="Compiler\Link\ModuleOf.vb" />
+    <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
@@ -338,7 +339,7 @@
     <Compile Include="Type\Types.vb" />
     <Compile Include="Type\TypeAlias.vb" />
     <Compile Include="Type\TypeAbstract.vb" />
-    <Compile Include="Compiler\ModuleBuilder.vb" />
+    <Compile Include="Compiler\SExpression\ModuleBuilder.vb" />
     <Compile Include="Compiler\wat2wasm.vb" />
     <Compile Include="Extensions.vb" />
     <Compile Include="Symbols\Blocks\If.vb" />
