--- a/wasm/packages.config
+++ b/wasm/packages.config
@@ -2,11 +2,11 @@
 <packages>
   <package id="Microsoft.Build.Locator" version="1.2.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.2" PrivateAssets="all" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.10.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.10.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.10.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.MSBuild" version="2.10.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.MSBuild" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Composition" version="1.0.31" targetFramework="net47" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.13" targetFramework="net47" />
   <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="net47" />
@@ -15,6 +15,7 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.13" targetFramework="net47" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.13" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net47" />
@@ -37,6 +38,8 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
