--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -335,10 +335,11 @@
     <Compile Include="Symbols\Parser\Expressions\ObjectCreatorParser.vb" />
     <Compile Include="Symbols\Parser\Body\DeclaratorParser.vb" />
     <Compile Include="Type\Literal.vb" />
+    <Compile Include="Type\Models\RawType.vb" />
     <Compile Include="Type\TypeEquality.vb" />
     <Compile Include="Type\Types.vb" />
-    <Compile Include="Type\TypeAlias.vb" />
-    <Compile Include="Type\TypeAbstract.vb" />
+    <Compile Include="Type\Models\TypeAlias.vb" />
+    <Compile Include="Type\Models\TypeAbstract.vb" />
     <Compile Include="Compiler\SExpression\ModuleBuilder.vb" />
     <Compile Include="Compiler\wat2wasm.vb" />
     <Compile Include="Extensions.vb" />
