user object expression

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -325,6 +325,7 @@
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
+    <Compile Include="Symbols\Memory\UserObject.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Start.vb" />
     <Compile Include="Symbols\Parser\Expressions\BinaryOperatorParser.vb" />
@@ -354,7 +355,7 @@
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\String.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\NamespaceDoc.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Math.vb" />
-    <Compile Include="Symbols\Memory\ArraySymbol.vb" />
+    <Compile Include="Symbols\ArrayListSymbol.vb" />
     <Compile Include="Symbols\Memory\Memory.vb" />
     <Compile Include="Symbols\Memory\StringSymbol.vb" />
     <Compile Include="Symbols\EnumSymbol.vb" />
