split source file

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -325,6 +325,7 @@
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
+    <Compile Include="Symbols\Memory\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\UserObject.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Start.vb" />
