--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -357,7 +357,7 @@
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\NamespaceDoc.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Math.vb" />
     <Compile Include="Symbols\ArrayListSymbol.vb" />
-    <Compile Include="Symbols\Memory\Memory.vb" />
+    <Compile Include="Compiler\Link\Memory.vb" />
     <Compile Include="Symbols\Memory\StringSymbol.vb" />
     <Compile Include="Symbols\EnumSymbol.vb" />
     <Compile Include="Symbols\Parser\Body\BlockParser.vb" />
