--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -326,6 +326,7 @@
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
     <Compile Include="Symbols\Memory\ArrayBlock.vb" />
+    <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\UserObject.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Start.vb" />
