class meta data

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -324,6 +324,7 @@
     <Compile Include="Compiler\Link\ModuleOf.vb" />
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
+    <Compile Include="Symbols\Memory\ClassMeta.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
     <Compile Include="Symbols\Memory\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
