--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -330,6 +330,7 @@
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\UserObject.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
+    <Compile Include="Symbols\Parser\ClassParser.vb" />
     <Compile Include="Symbols\Start.vb" />
     <Compile Include="Symbols\Parser\Expressions\BinaryOperatorParser.vb" />
     <Compile Include="Symbols\ReferenceSymbol.vb" />
