project -> modules/class -> body???

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -322,6 +322,7 @@
   <ItemGroup>
     <Compile Include="Compiler\Link\FindSymbols.vb" />
     <Compile Include="Compiler\Link\ModuleOf.vb" />
+    <Compile Include="Compiler\Project.vb" />
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Memory\ClassMeta.vb" />
@@ -346,7 +347,7 @@
     <Compile Include="Type\Models\TypeAlias.vb" />
     <Compile Include="Type\Models\TypeAbstract.vb" />
     <Compile Include="Compiler\SExpression\ModuleBuilder.vb" />
-    <Compile Include="Compiler\wat2wasm.vb" />
+    <Compile Include="Compiler\Wat23wasm.vb" />
     <Compile Include="Extensions.vb" />
     <Compile Include="Symbols\Blocks\If.vb" />
     <Compile Include="Symbols\Blocks\Loop.vb" />
