Json data model of <see cref="ClassMeta"/>

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -325,11 +325,12 @@
     <Compile Include="Compiler\Project.vb" />
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
-    <Compile Include="Symbols\Memory\ClassMeta.vb" />
+    <Compile Include="Symbols\Memory\ClassType\MetaJSON2.vb" />
+    <Compile Include="Symbols\Memory\ClassType\ClassMeta.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
     <Compile Include="Symbols\Memory\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
-    <Compile Include="Symbols\Memory\UserObject.vb" />
+    <Compile Include="Symbols\Memory\ClassType\UserObject.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Parser\ClassParser.vb" />
     <Compile Include="Symbols\Start.vb" />
