meta json object

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -325,7 +325,7 @@
     <Compile Include="Compiler\Project.vb" />
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
-    <Compile Include="Symbols\Memory\ClassType\MetaJSON2.vb" />
+    <Compile Include="Symbols\Memory\ClassType\MetaJSON.vb" />
     <Compile Include="Symbols\Memory\ClassType\ClassMeta.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
     <Compile Include="Symbols\Memory\ArrayBlock.vb" />
