split source files

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -331,6 +331,7 @@
     <Compile Include="Symbols\Memory\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\ClassType\UserObject.vb" />
+    <Compile Include="Symbols\Parser\ObjectOperator.vb" />
     <Compile Include="Symbols\Parser\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="Symbols\Parser\ClassParser.vb" />
     <Compile Include="Symbols\Start.vb" />
