have bugs of array list

--- a/test/demo_proj/HelloWorld.vbproj
+++ b/test/demo_proj/HelloWorld.vbproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.vb" />
+    <Compile Include="array.vb" />
     <Compile Include="console.vb" />
     <Compile Include="document.vb" />
     <Compile Include="Math.vb" />
