fix for invalid data type cast when get field member value

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -326,6 +326,7 @@
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Memory\ArrayBlockOperator.vb" />
+    <Compile Include="Symbols\Memory\ClassType\FieldValue.vb" />
     <Compile Include="Symbols\Memory\ClassType\MetaJSON.vb" />
     <Compile Include="Symbols\Memory\ClassType\ClassMeta.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
