--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -324,6 +324,7 @@
     <Compile Include="Compiler\Link\ModuleOf.vb" />
     <Compile Include="Compiler\Project.vb" />
     <Compile Include="Compiler\SExpression\Extensions.vb" />
+    <Compile Include="Compiler\SExpression\MemberHelper.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Memory\ArrayBlockOperator.vb" />
     <Compile Include="Symbols\Memory\ClassType\FieldValue.vb" />
