--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -142,6 +142,7 @@
     <Compile Include="incrementTest.vb" />
     <Compile Include="dictionarytest.vb" />
     <Compile Include="arrayTest2.vb" />
+    <Compile Include="classTest3.vb" />
     <Compile Include="Modulemethod_test.vb" />
     <Compile Include="nullreferenceTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
