intialize of class type for array not success

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -326,6 +326,7 @@
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="Compiler\SExpression\MemberHelper.vb" />
     <Compile Include="DeclareHelpers.vb" />
+    <Compile Include="Symbols\DeclaredObject\SymbolType.vb" />
     <Compile Include="Symbols\Memory\ArrayBlockOperator.vb" />
     <Compile Include="Symbols\Memory\ClassType\FieldValue.vb" />
     <Compile Include="Symbols\Memory\ClassType\MetaJSON.vb" />
@@ -339,7 +340,7 @@
     <Compile Include="Symbols\Parser\ClassParser.vb" />
     <Compile Include="Symbols\Start.vb" />
     <Compile Include="Symbols\Parser\Expressions\BinaryOperatorParser.vb" />
-    <Compile Include="Symbols\ReferenceSymbol.vb" />
+    <Compile Include="Symbols\DeclaredObject\ReferenceSymbol.vb" />
     <Compile Include="Symbols\FuncInvoke.vb" />
     <Compile Include="Symbols\Parser\Expressions\FuncInvokeParser.vb" />
     <Compile Include="Symbols\Parser\Expressions\MemberCallsParser.vb" />
