add structre test demo

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -131,6 +131,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="structuretest.vb" />
     <Compile Include="ClassTest.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="DeclareTest.vb" />
