fix for multiple module starters

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -325,6 +325,7 @@
     <Compile Include="Compiler\Project.vb" />
     <Compile Include="Compiler\SExpression\Extensions.vb" />
     <Compile Include="Compiler\SExpression\MemberHelper.vb" />
+    <Compile Include="Compiler\SExpression\AppStarter.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\DeclaredObject\SymbolType.vb" />
     <Compile Include="Symbols\Memory\ArrayBlockOperator.vb" />
