split source file

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -327,6 +327,7 @@
     <Compile Include="Compiler\SExpression\MemberHelper.vb" />
     <Compile Include="Compiler\SExpression\AppStarter.vb" />
     <Compile Include="DeclareHelpers.vb" />
+    <Compile Include="Symbols\Blocks\Block.vb" />
     <Compile Include="Symbols\DeclaredObject\SymbolType.vb" />
     <Compile Include="Symbols\Memory\ArrayBlockOperator.vb" />
     <Compile Include="Symbols\Memory\ClassType\FieldValue.vb" />
