ad class and structure compres test

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -131,6 +131,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="differenceTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
     <Compile Include="structuretest.vb" />
     <Compile Include="ClassTest.vb" />
