--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="differenceTest.vb" />
+    <Compile Include="arrayDeclareTest2.vb" />
     <Compile Include="structurearrayTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
     <Compile Include="structuretest.vb" />
