--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -338,17 +338,17 @@
     <Compile Include="Symbols\Memory\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\ClassType\UserObject.vb" />
-    <Compile Include="Parser\ObjectOperator.vb" />
-    <Compile Include="Parser\Expressions\ArrayExpressionParser.vb" />
-    <Compile Include="Parser\ClassParser.vb" />
+    <Compile Include="SyntaxAnalysis\ObjectOperator.vb" />
+    <Compile Include="SyntaxAnalysis\Expressions\ArrayExpressionParser.vb" />
+    <Compile Include="SyntaxAnalysis\ClassParser.vb" />
     <Compile Include="Symbols\Start.vb" />
-    <Compile Include="Parser\Expressions\BinaryOperatorParser.vb" />
+    <Compile Include="SyntaxAnalysis\Expressions\BinaryOperatorParser.vb" />
     <Compile Include="Symbols\DeclaredObject\ReferenceSymbol.vb" />
     <Compile Include="Symbols\FuncInvoke.vb" />
-    <Compile Include="Parser\Expressions\FuncInvokeParser.vb" />
-    <Compile Include="Parser\Expressions\MemberCallsParser.vb" />
-    <Compile Include="Parser\Expressions\ObjectCreatorParser.vb" />
-    <Compile Include="Parser\Body\DeclaratorParser.vb" />
+    <Compile Include="SyntaxAnalysis\Expressions\FuncInvokeParser.vb" />
+    <Compile Include="SyntaxAnalysis\Expressions\MemberCallsParser.vb" />
+    <Compile Include="SyntaxAnalysis\Expressions\ObjectCreatorParser.vb" />
+    <Compile Include="SyntaxAnalysis\Body\DeclaratorParser.vb" />
     <Compile Include="Type\Literal.vb" />
     <Compile Include="Type\Models\RawType.vb" />
     <Compile Include="Type\TypeEquality.vb" />
@@ -373,19 +373,19 @@
     <Compile Include="Compiler\Link\Memory.vb" />
     <Compile Include="Symbols\Memory\StringSymbol.vb" />
     <Compile Include="Symbols\EnumSymbol.vb" />
-    <Compile Include="Parser\Body\BlockParser.vb" />
-    <Compile Include="Parser\AsTypeHandler.vb" />
-    <Compile Include="Parser\AttributeParser.vb" />
-    <Compile Include="Parser\StringParser.vb" />
-    <Compile Include="Parser\ModuleParser.vb" />
+    <Compile Include="SyntaxAnalysis\Body\BlockParser.vb" />
+    <Compile Include="SyntaxAnalysis\AsTypeHandler.vb" />
+    <Compile Include="SyntaxAnalysis\AttributeParser.vb" />
+    <Compile Include="SyntaxAnalysis\StringParser.vb" />
+    <Compile Include="SyntaxAnalysis\ModuleParser.vb" />
     <Compile Include="Compiler\Link\SymbolTable.vb" />
     <Compile Include="Symbols\DeclaredObject\ImportSymbol.vb" />
     <Compile Include="Symbols\FunctionSymbol\FuncSignature.vb" />
     <Compile Include="Symbols\Expression.vb" />
     <Compile Include="Symbols\ExportSymbol.vb" />
-    <Compile Include="Parser\FunctionParser.vb" />
-    <Compile Include="Parser\Body\BodyParser.vb" />
-    <Compile Include="Parser\Expressions\ExpressionParser.vb" />
+    <Compile Include="SyntaxAnalysis\FunctionParser.vb" />
+    <Compile Include="SyntaxAnalysis\Body\BodyParser.vb" />
+    <Compile Include="SyntaxAnalysis\Expressions\ExpressionParser.vb" />
     <Compile Include="Type\CTypeHandle.vb" />
     <Compile Include="Symbols\Memory\BitConverter.vb" />
     <Compile Include="Compiler\Wabt.vb" />
