Do             doNothing()         Loop

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -133,6 +133,8 @@
   <ItemGroup>
     <Compile Include="differenceTest.vb" />
     <Compile Include="arrayDeclareTest2.vb" />
+    <Compile Include="loopTest1.vb" />
+    <Compile Include="loopTest2.vb" />
     <Compile Include="structurearrayTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
     <Compile Include="structuretest.vb" />
