--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -135,6 +135,7 @@
     <Compile Include="arrayDeclareTest2.vb" />
     <Compile Include="loopTest1.vb" />
     <Compile Include="loopTest2.vb" />
+    <Compile Include="loopTest3.vb" />
     <Compile Include="structurearrayTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
     <Compile Include="structuretest.vb" />
