--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -320,6 +320,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compiler\Link\Context.vb" />
     <Compile Include="Compiler\Link\FindSymbols.vb" />
     <Compile Include="Compiler\Link\ModuleOf.vb" />
     <Compile Include="Compiler\Project.vb" />
