type operators module

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -351,7 +351,7 @@
     <Compile Include="SyntaxAnalysis\Expressions\MemberCallsParser.vb" />
     <Compile Include="SyntaxAnalysis\Expressions\ObjectCreatorParser.vb" />
     <Compile Include="SyntaxAnalysis\Body\DeclaratorParser.vb" />
-    <Compile Include="Type\Class1.vb" />
+    <Compile Include="Type\TypeOperator.vb" />
     <Compile Include="Type\Literal.vb" />
     <Compile Include="Type\Models\RawType.vb" />
     <Compile Include="Type\TypeEquality.vb" />
